初始化工具